--- a/SistemaInterdisciplinar/frm_principal.resx
+++ b/SistemaInterdisciplinar/frm_principal.resx
@@ -121,6 +121,12 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="configuraçõesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="configuraçõesToolStripMenuItem.Text" xml:space="preserve">
+    <value>Configurações</value>
+  </data>
   <data name="mscmd_sair.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 22</value>
   </data>
@@ -132,6 +138,96 @@
   </data>
   <data name="arquivoToolStripMenuItem.Text" xml:space="preserve">
     <value>Arquivo</value>
+  </data>
+  <data name="novoLançamentoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="novoLançamentoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Novo lançamento</value>
+  </data>
+  <data name="verLançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="verLançamentosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Ver lançamentos</value>
+  </data>
+  <data name="lançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>90, 20</value>
+  </data>
+  <data name="lançamentosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Lançamentos</value>
+  </data>
+  <data name="diárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="diárioToolStripMenuItem.Text" xml:space="preserve">
+    <value>Diário</value>
+  </data>
+  <data name="balançoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="balançoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Balanço</value>
+  </data>
+  <data name="razãoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="razãoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Razão</value>
+  </data>
+  <data name="dREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="dREToolStripMenuItem.Text" xml:space="preserve">
+    <value>DRE</value>
+  </data>
+  <data name="livrosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="livrosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Livros</value>
+  </data>
+  <data name="aREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 22</value>
+  </data>
+  <data name="aREToolStripMenuItem.Text" xml:space="preserve">
+    <value>ARE</value>
+  </data>
+  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 22</value>
+  </data>
+  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Text" xml:space="preserve">
+    <value>Fluxo Entrada e Saída (estoque)</value>
+  </data>
+  <data name="relatóriosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="relatóriosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Relatórios</value>
+  </data>
+  <data name="relátoriosELivrosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>111, 20</value>
+  </data>
+  <data name="relátoriosELivrosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Relatórios e livros</value>
+  </data>
+  <data name="consultarEstoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>187, 22</value>
+  </data>
+  <data name="consultarEstoqueToolStripMenuItem.Text" xml:space="preserve">
+    <value>Consultar Estoque</value>
+  </data>
+  <data name="efetuarSaídaEntradaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>187, 22</value>
+  </data>
+  <data name="efetuarSaídaEntradaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Efetuar Saída/Entrada</value>
+  </data>
+  <data name="estoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>61, 20</value>
+  </data>
+  <data name="estoqueToolStripMenuItem.Text" xml:space="preserve">
+    <value>Estoque</value>
   </data>
   <data name="menu_principal.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
@@ -224,6 +320,102 @@
   </data>
   <data name="&gt;&gt;lbl_usuario.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lançamentosToolStripMenuItem.Name" xml:space="preserve">
+    <value>lançamentosToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;lançamentosToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;estoqueToolStripMenuItem.Name" xml:space="preserve">
+    <value>estoqueToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;estoqueToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Name" xml:space="preserve">
+    <value>verLançamentosToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;novoLançamentoToolStripMenuItem.Name" xml:space="preserve">
+    <value>novoLançamentoToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;novoLançamentoToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Name" xml:space="preserve">
+    <value>consultarEstoqueToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Name" xml:space="preserve">
+    <value>efetuarSaídaEntradaToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;relátoriosELivrosToolStripMenuItem.Name" xml:space="preserve">
+    <value>relátoriosELivrosToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;relátoriosELivrosToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;livrosToolStripMenuItem.Name" xml:space="preserve">
+    <value>livrosToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;livrosToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;diárioToolStripMenuItem.Name" xml:space="preserve">
+    <value>diárioToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;diárioToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;balançoToolStripMenuItem.Name" xml:space="preserve">
+    <value>balançoToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;balançoToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;razãoToolStripMenuItem.Name" xml:space="preserve">
+    <value>razãoToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;razãoToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;dREToolStripMenuItem.Name" xml:space="preserve">
+    <value>dREToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;dREToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;relatóriosToolStripMenuItem.Name" xml:space="preserve">
+    <value>relatóriosToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;relatóriosToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;aREToolStripMenuItem.Name" xml:space="preserve">
+    <value>aREToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;aREToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;fluxoEntradaESaídaestoqueToolStripMenuItem.Name" xml:space="preserve">
+    <value>fluxoEntradaESaídaestoqueToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;fluxoEntradaESaídaestoqueToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;configuraçõesToolStripMenuItem.Name" xml:space="preserve">
+    <value>configuraçõesToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;configuraçõesToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frm_principal</value>
