--- a/SistemaInterdisciplinar/frm_principal.resx
+++ b/SistemaInterdisciplinar/frm_principal.resx
@@ -121,35 +121,11 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="configuraçõesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="configuraçõesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Configurações</value>
-  </data>
-  <data name="mscmd_sair.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="mscmd_sair.Text" xml:space="preserve">
-    <value>Sair</value>
-  </data>
   <data name="arquivoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>61, 20</value>
   </data>
   <data name="arquivoToolStripMenuItem.Text" xml:space="preserve">
     <value>Arquivo</value>
-  </data>
-  <data name="novoLançamentoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="novoLançamentoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Novo lançamento</value>
-  </data>
-  <data name="verLançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="verLançamentosToolStripMenuItem.Text" xml:space="preserve">
-    <value>Ver lançamentos</value>
   </data>
   <data name="lançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>90, 20</value>
@@ -157,50 +133,14 @@
   <data name="lançamentosToolStripMenuItem.Text" xml:space="preserve">
     <value>Lançamentos</value>
   </data>
-  <data name="diárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="diárioToolStripMenuItem.Text" xml:space="preserve">
-    <value>Diário</value>
-  </data>
-  <data name="balançoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="balançoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Balanço</value>
-  </data>
-  <data name="razãoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="razãoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Razão</value>
-  </data>
-  <data name="dREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="dREToolStripMenuItem.Text" xml:space="preserve">
-    <value>DRE</value>
-  </data>
   <data name="livrosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>126, 22</value>
   </data>
   <data name="livrosToolStripMenuItem.Text" xml:space="preserve">
     <value>Livros</value>
   </data>
-  <data name="aREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>238, 22</value>
-  </data>
-  <data name="aREToolStripMenuItem.Text" xml:space="preserve">
-    <value>ARE</value>
-  </data>
-  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>238, 22</value>
-  </data>
-  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Text" xml:space="preserve">
-    <value>Fluxo Entrada e Saída (estoque)</value>
-  </data>
   <data name="relatóriosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>126, 22</value>
   </data>
   <data name="relatóriosToolStripMenuItem.Text" xml:space="preserve">
     <value>Relatórios</value>
@@ -254,19 +194,86 @@
   <data name="&gt;&gt;menu_principal.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="mscmd_config.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAK1SURBVGhD7dnLy01RHMbxI7kOFJlREsZM3MotGRGK3lwmFGYKmTFxKSW3gX/BwMClDJgYuqQ3
+        BkIxQGYkIgxc4vu877trtz377LX22o492E99ap99zvqt9Z73nLXXWbvXpUuXRjMVq7CmhJ7Ta1qbW/hd
+        4TZam3dwg877hFZmMtyAnRloXRbBDdZZjNZlK9xgne0YaGZD79q4kUc+p+AG65xFv6zE8tHD9EzDB6jj
+        VziBuciyAY9RHGQVtdmILPNwDK+h59Wn+k7OGRQ7l3u4XjhXh2rcLZzLXEBS5uA7XPFB+In5qJ0m3uFU
+        N1Arq+EK/g8aS1Q02zyFKxZK//4nY3TsXhNKY+k3A/6V3XCFQuhjtwQTkEXHOncNrk2IPQhO2cxT5SCq
+        sgVf4Nr3cx7BmYTLcIXKHEFo9sLVKKOxaEzROYCQz+8wYvMArlae+j6MpOiy/h6ug4yuxrFRG1croz7V
+        dyPZDNeJfMV4xGYi1NbVlCE0ll1wnchz1M0LuJoSNetURcVcJ/Kv/gBN5Y1lG1wn8g11PkJqo7aupuxA
+        I1mLj3CdZNYjNmrjamW0nF6HpGgK+wXXQd4dxOYhXK08TaOHEJ0puApXtEzMl+4oXI0yl6BZKzjn4Ar1
+        oylRy4Sq7IdrX+U0grMPrkgILdi0cMu/YzpeipTFXNSspBkidTn9A8/GpC6nHyFqOa206QfNMtTKTbiC
+        g6TJpHb0gzr1359CGwraWEjKRbji2gpp4kf/FdwvnMtEzTxlmY7PUMGXOI78u7IJdTa29MXMX8EX4CTe
+        QM9rp7uRjS1FX6IVo4el0SZUcZBltA1ZFs02moZnjTwaYHbCDdYJueANPLpQucE6C9G6zIQbrKObIa2M
+        bh+5Aee9RWujG3hu0Hm6EdjaaBmuJYi7xSq6zarXdOnSpZH0en8AeTcdkxwZbiEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="mscmd_config.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="mscmd_config.Text" xml:space="preserve">
+    <value>Configurações</value>
+  </data>
+  <data name="mscmd_sair.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="mscmd_sair.Text" xml:space="preserve">
+    <value>Sair</value>
+  </data>
+  <data name="novoLançamentoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="novoLançamentoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Novo lançamento</value>
+  </data>
+  <data name="verLançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="verLançamentosToolStripMenuItem.Text" xml:space="preserve">
+    <value>Ver lançamentos</value>
+  </data>
+  <data name="diárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>116, 22</value>
+  </data>
+  <data name="diárioToolStripMenuItem.Text" xml:space="preserve">
+    <value>Diário</value>
+  </data>
+  <data name="balançoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>116, 22</value>
+  </data>
+  <data name="balançoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Balanço</value>
+  </data>
+  <data name="razãoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>116, 22</value>
+  </data>
+  <data name="razãoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Razão</value>
+  </data>
+  <data name="dREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>116, 22</value>
+  </data>
+  <data name="dREToolStripMenuItem.Text" xml:space="preserve">
+    <value>DRE</value>
+  </data>
+  <data name="aREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 22</value>
+  </data>
+  <data name="aREToolStripMenuItem.Text" xml:space="preserve">
+    <value>ARE</value>
+  </data>
+  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 22</value>
+  </data>
+  <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Text" xml:space="preserve">
+    <value>Fluxo Entrada e Saída (estoque)</value>
+  </data>
   <metadata name="status_strip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="lbl_usuario.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
-    <value>No</value>
-  </data>
-  <data name="lbl_usuario.Size" type="System.Drawing.Size, System.Drawing">
-    <value>142, 17</value>
-  </data>
-  <data name="lbl_usuario.Text" xml:space="preserve">
-    <value>USUÁRIO: NÃO LOGADO.</value>
-  </data>
   <data name="status_strip.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 428</value>
   </data>
@@ -291,6 +298,16 @@
   <data name="&gt;&gt;status_strip.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lbl_usuario.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
+    <value>No</value>
+  </data>
+  <data name="lbl_usuario.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 17</value>
+  </data>
+  <data name="lbl_usuario.Text" xml:space="preserve">
+    <value>USUÁRIO: NÃO LOGADO.</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -309,34 +326,22 @@
   <data name="&gt;&gt;arquivoToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;mscmd_config.Name" xml:space="preserve">
+    <value>mscmd_config</value>
+  </data>
+  <data name="&gt;&gt;mscmd_config.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;mscmd_sair.Name" xml:space="preserve">
     <value>mscmd_sair</value>
   </data>
   <data name="&gt;&gt;mscmd_sair.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;lbl_usuario.Name" xml:space="preserve">
-    <value>lbl_usuario</value>
-  </data>
-  <data name="&gt;&gt;lbl_usuario.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;lançamentosToolStripMenuItem.Name" xml:space="preserve">
     <value>lançamentosToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;lançamentosToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;estoqueToolStripMenuItem.Name" xml:space="preserve">
-    <value>estoqueToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;estoqueToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Name" xml:space="preserve">
-    <value>verLançamentosToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;novoLançamentoToolStripMenuItem.Name" xml:space="preserve">
@@ -345,16 +350,10 @@
   <data name="&gt;&gt;novoLançamentoToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Name" xml:space="preserve">
-    <value>consultarEstoqueToolStripMenuItem</value>
+  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Name" xml:space="preserve">
+    <value>verLançamentosToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Name" xml:space="preserve">
-    <value>efetuarSaídaEntradaToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;verLançamentosToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;relátoriosELivrosToolStripMenuItem.Name" xml:space="preserve">
@@ -411,11 +410,29 @@
   <data name="&gt;&gt;fluxoEntradaESaídaestoqueToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;configuraçõesToolStripMenuItem.Name" xml:space="preserve">
-    <value>configuraçõesToolStripMenuItem</value>
+  <data name="&gt;&gt;estoqueToolStripMenuItem.Name" xml:space="preserve">
+    <value>estoqueToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;configuraçõesToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;estoqueToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Name" xml:space="preserve">
+    <value>consultarEstoqueToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;consultarEstoqueToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Name" xml:space="preserve">
+    <value>efetuarSaídaEntradaToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lbl_usuario.Name" xml:space="preserve">
+    <value>lbl_usuario</value>
+  </data>
+  <data name="&gt;&gt;lbl_usuario.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frm_principal</value>
