--- a/SistemaInterdisciplinar/frm_principal.resx
+++ b/SistemaInterdisciplinar/frm_principal.resx
@@ -121,6 +121,9 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="menu_principal.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 10pt</value>
+  </data>
   <data name="mscmd_config.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAArVJREFUaEPt
@@ -139,124 +142,142 @@
 </value>
   </data>
   <data name="mscmd_config.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 22</value>
+    <value>165, 24</value>
   </data>
   <data name="mscmd_config.Text" xml:space="preserve">
     <value>Configurações</value>
   </data>
   <data name="mscmd_sair.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 22</value>
+    <value>165, 24</value>
   </data>
   <data name="mscmd_sair.Text" xml:space="preserve">
     <value>Sair</value>
   </data>
   <data name="arquivoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>71, 20</value>
+    <value>78, 23</value>
   </data>
   <data name="arquivoToolStripMenuItem.Text" xml:space="preserve">
     <value>Aplicação</value>
   </data>
   <data name="novoLançamentoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>186, 24</value>
   </data>
   <data name="novoLançamentoToolStripMenuItem.Text" xml:space="preserve">
     <value>Novo lançamento</value>
   </data>
   <data name="verLançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>186, 24</value>
   </data>
   <data name="verLançamentosToolStripMenuItem.Text" xml:space="preserve">
     <value>Ver lançamentos</value>
   </data>
   <data name="verContasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>186, 24</value>
   </data>
   <data name="verContasToolStripMenuItem.Text" xml:space="preserve">
     <value>Ver Contas</value>
   </data>
   <data name="lançamentosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 20</value>
+    <value>160, 23</value>
   </data>
   <data name="lançamentosToolStripMenuItem.Text" xml:space="preserve">
     <value>Contas e Lançamentos</value>
   </data>
   <data name="diárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>125, 24</value>
   </data>
   <data name="diárioToolStripMenuItem.Text" xml:space="preserve">
     <value>Diário</value>
   </data>
   <data name="balançoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>125, 24</value>
   </data>
   <data name="balançoToolStripMenuItem.Text" xml:space="preserve">
     <value>Balanço</value>
   </data>
   <data name="razãoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>125, 24</value>
   </data>
   <data name="razãoToolStripMenuItem.Text" xml:space="preserve">
     <value>Razão</value>
   </data>
   <data name="dREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>125, 24</value>
   </data>
   <data name="dREToolStripMenuItem.Text" xml:space="preserve">
     <value>DRE</value>
   </data>
   <data name="livrosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>126, 22</value>
+    <value>138, 24</value>
   </data>
   <data name="livrosToolStripMenuItem.Text" xml:space="preserve">
     <value>Livros</value>
   </data>
   <data name="aREToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>238, 22</value>
+    <value>269, 24</value>
   </data>
   <data name="aREToolStripMenuItem.Text" xml:space="preserve">
     <value>ARE</value>
   </data>
   <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>238, 22</value>
+    <value>269, 24</value>
   </data>
   <data name="fluxoEntradaESaídaestoqueToolStripMenuItem.Text" xml:space="preserve">
     <value>Fluxo Entrada e Saída (estoque)</value>
   </data>
   <data name="relatóriosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>126, 22</value>
+    <value>138, 24</value>
   </data>
   <data name="relatóriosToolStripMenuItem.Text" xml:space="preserve">
     <value>Relatórios</value>
   </data>
   <data name="relátoriosELivrosToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>111, 20</value>
+    <value>128, 23</value>
   </data>
   <data name="relátoriosELivrosToolStripMenuItem.Text" xml:space="preserve">
     <value>Relatórios e livros</value>
   </data>
   <data name="consultarEstoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
+    <value>209, 24</value>
   </data>
   <data name="consultarEstoqueToolStripMenuItem.Text" xml:space="preserve">
     <value>Consultar Estoque</value>
   </data>
   <data name="efetuarSaídaEntradaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 22</value>
+    <value>209, 24</value>
   </data>
   <data name="efetuarSaídaEntradaToolStripMenuItem.Text" xml:space="preserve">
     <value>Efetuar Saída/Entrada</value>
   </data>
   <data name="estoqueToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 20</value>
+    <value>70, 23</value>
   </data>
   <data name="estoqueToolStripMenuItem.Text" xml:space="preserve">
     <value>Estoque</value>
+  </data>
+  <data name="administrarUsuárioToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>229, 24</value>
+  </data>
+  <data name="administrarUsuárioToolStripMenuItem.Text" xml:space="preserve">
+    <value>Administrar Usuários</value>
+  </data>
+  <data name="consultarLogDeAcessoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>229, 24</value>
+  </data>
+  <data name="consultarLogDeAcessoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Consultar Log de Acesso</value>
+  </data>
+  <data name="sistemaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 23</value>
+  </data>
+  <data name="sistemaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Sistema</value>
   </data>
   <data name="menu_principal.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
   <data name="menu_principal.Size" type="System.Drawing.Size, System.Drawing">
-    <value>800, 24</value>
+    <value>800, 27</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="menu_principal.TabIndex" type="System.Int32, mscorlib">
@@ -438,6 +459,24 @@
     <value>efetuarSaídaEntradaToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;efetuarSaídaEntradaToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;sistemaToolStripMenuItem.Name" xml:space="preserve">
+    <value>sistemaToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;sistemaToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;administrarUsuárioToolStripMenuItem.Name" xml:space="preserve">
+    <value>administrarUsuárioToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;administrarUsuárioToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;consultarLogDeAcessoToolStripMenuItem.Name" xml:space="preserve">
+    <value>consultarLogDeAcessoToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;consultarLogDeAcessoToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;lbl_usuario.Name" xml:space="preserve">
